# jbix

./: .env.example  .gitignore  LICENSE  README.md  assignee_map.example.yaml  groups.yaml  jbix.py  make_report.py  pyproject.toml  tags.yaml
jbix/: __init__.py  bugzilla.py  config.py  constants.py  fuzzy.py  groups.py  health.py  jira.py  people.py  snapshots.py  sync.py
tests/: conftest.py  test_bugzilla.py  test_config.py  test_constants.py  test_fuzzy.py  test_groups.py  test_health.py  test_jbix.py  test_jira.py  test_make_report.py  test_people.py  test_snapshots.py  test_sync.py
