[project]
name = "jbix"
version = "0.1.0"
description = "Bidirectional Bugzilla ↔ Jira sync with drift health reporting, driven by JBI config."
readme = "README.md"
requires-python = ">=3.11"
license = "MPL-2.0"
authors = [
    { name = "Dave Hunt", email = "dhunt@mozilla.com" },
]
dependencies = [
    "jira>=3.8.0",
    "python-bugzilla>=3.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "rapidfuzz>=3.0.0",
    "requests>=2.32.0",
]

[project.urls]
Repository = "https://github.com/davehunt/jbix"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# load_dotenv() must run before jbix.* imports; E402 is intentional here
"jbix.py" = ["E402"]

[tool.coverage.run]
source = ["jbix"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
